Externalised the VM in a dedicated repository

--- a/ex08/Cargo.toml
+++ b/ex08/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 aoc_helper = { path = "../../aoc_helper", version = "0.1.0" }
+aoc2020_vm = { path = "../../aoc2020_vm", version = "0.1.0" }
