--- a/ex14/Cargo.toml
+++ b/ex14/Cargo.toml
@@ -11,3 +11,4 @@ aoc_helper = { path = "../../aoc_helper", version = "0.1.0" }
 bit-array = "0.4.4"
 lazy_static = "1.4.0"
 regex = "1.4.2"
+typenum = "1.12.0"
